--- a/vanilla/es5/package.json
+++ b/vanilla/es5/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "flowchart-builder",
-  "version": "6.14.0",
+  "name": "flowchart-builder-es5",
+  "version": "6.17.0",
   "description": "",
   "scripts": {
     "serve": "./node_modules/.bin/http-server ."
@@ -16,7 +16,7 @@
   },
   "homepage": "https://github.com/jsplumb/jsplumbtoolkit-applications#readme",
   "dependencies": {
-    "@jsplumbtoolkit/browser-ui": "^6.14.0"
+    "@jsplumbtoolkit/browser-ui": "^6.17.0"
   },
   "devDependencies": {
     "http-server": "^14.1.1"
