--- a/es5/package.json
+++ b/es5/package.json
@@ -1,6 +1,6 @@
 {
     "name": "flowchart-builder-es5",
-    "version": "6.23.0",
+    "version": "6.24.0",
     "description": "",
     "scripts": {
         "serve": "./node_modules/.bin/http-server ."
@@ -16,7 +16,7 @@
     },
     "homepage": "https://github.com/jsplumb/jsplumbtoolkit-applications#readme",
     "dependencies": {
-        "@jsplumbtoolkit/browser-ui": "^6.23.0"
+        "@jsplumbtoolkit/browser-ui": "file:../../../toolkit-6/dist/browser-ui/jsplumbtoolkit-browser-ui.tgz"
     },
     "devDependencies": {
         "http-server": "^14.1.1"
